# stackoverflow-obj-det-api

./: Makefile  README.md  pyproject.toml
src/api/: README.md  setup.py
src/api/.openapi-generator/: FILES
src/api/docs/: UsersPost200ResponseInner.md  UsersPost200ResponseInnerBoundingBoxesInner.md  UsersPost400Response.md
src/api/openapi_client/: __init__.py  api_client.py  configuration.py  rest.py
src/api/openapi_client/models/: __init__.py  users_post200_response_inner.py  users_post_request.py
src/api/test/: test_default_api.py  test_users_post200_response_inner.py  test_users_post400_response.py  test_users_post_request.py
src/spec/: api.yaml
stackoverflow_api/: db.sqlite3  manage.py
stackoverflow_api/detection/: serializers.py  tests.py  views.py
stackoverflow_api/detection/api_client/: pyproject.toml
stackoverflow_api/detection/api_client/docs/: DefaultApi.md  UsersPost422Response.md  UsersPost500Response.md  UsersPostRequest.md
stackoverflow_api/detection/api_client/openapi_client/: exceptions.py
stackoverflow_api/detection/api_client/openapi_client/api/: default_api.py
stackoverflow_api/detection/api_client/openapi_client/models/: users_post200_response_inner_bounding_boxes_inner.py  users_post400_response.py  users_post422_response.py  users_post500_response.py
stackoverflow_api/detection/api_client/test/: test_users_post200_response_inner_bounding_boxes_inner.py  test_users_post422_response.py  test_users_post500_response.py
stackoverflow_api/stackoverflow_api/: asgi.py  settings.py  urls.py  wsgi.py
